# tbt

./: .flake8  .pre-commit-config.yaml  README.md  multiprocess_poc_graph_by_opt_in.py  multiprocess_poc_graph_by_retry.py  multiprocess_poc_no_graph.py  pyproject.toml
.github/workflows/: ci.yaml
documents/: tbt.yaml  tbt_copy.yaml
documents/subdir/: tbt.yaml  tbt_copy.yaml
documents/subdir/data/: frank.txt
tbt/: cli.py  loader.py  runner.py  utils.py
tbt/definitions/: definition_objects.py  definition_parser.py
tbt/meta_types/: destination.py  source.py  tbt_step.py  transform.py
tbt/step_types/destinations/: to_file.py  to_stdout.py
tbt/step_types/sources/: from_file.py
tbt/step_types/transforms/: count_list.py  count_unique_list.py  remove_short_sentences.py  split_sentences.py  split_words.py
tests/: fixtures.py  test_cli.py  test_loader.py  test_meta_types.py  test_runner.py  test_step_types.py  test_utils.py
tests/definitions/: test_definition_objects.py  test_definition_parser.py
tests/fixture_project/: tbt.yaml
tests/fixture_project/data/: frankenstein_prologue.txt
tests/fixture_project/subdir/: tbt.yaml
tests/fixture_project/subdir/data/: frankenstein_prologue_extended.txt
